--- a/express-server/package.json
+++ b/express-server/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
-    "mongoose": "^8.1.2"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.1.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
